data/derived/comb/progs/unify/prog5457.ml.out
Characters 151-154:
  helper (f b, f b);;
          ^^^
Error: This expression has type bool but an expression was expected of type
         int
